# ghc-recompilation-repro

./: README.md  cabal.project  switch.sh
pkg-a/: CHANGELOG.md  pkg-a.cabal
pkg-a/src/: MyLibA.hs  MyLibA.hs.down
pkg-b/: CHANGELOG.md  pkg-b.cabal
pkg-b/app/: Main.hs
pkg-b/src/: MyLibB.hs
