cabal-version:   3.0
name:            pkg-a
version:         0.1.0.0
license:         NONE
author:          andrea@andreabedini.com
maintainer:      Andrea Bedini
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLibA
    build-depends:    base
                    , template-haskell
    hs-source-dirs:   src
    default-language: Haskell2010
