cabal-version:   3.0
name:            pkg-b
version:         0.1.0.0
license:         NONE
author:          andrea@andreabedini.com
maintainer:      Andrea Bedini
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLibB
    build-depends:    base
                    , pkg-a
    hs-source-dirs:   src
    default-language: Haskell2010

executable pkg-b
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , pkg-b
    hs-source-dirs:   app
    default-language: Haskell2010
